@@ -7,9 +7,11 @@ Cobbler is written & maintained by:
 
 Patches and other contributions from:
 
+    Joseph Boyer Jr. <jboyer@liquidnet.com>
     David Brown <dmlb2000@gmail.com>
     James Bowes <jbowes@redhat.com>
     C. Daniel Chase <dan@cdchase.com>
+    Dave Hatton <dave@davehatton.it>
     Máirín Duffy <duffy@redhat.com>
     John Eckersberg <jeckersb@redhat.com>
     Scott Henson <shenson@redhat.com>
